# CMakeList.txt : CMake project for amusement-park, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("amusement-park")

# Add source to this project's executable.
add_executable (amusement-park "amusement-park.cpp" "amusement-park.h")

# TODO: Add tests and install targets if needed.
